compiler/test-data/parser/expressions/errors/unclosed_interpolation.frel
module expressions.errors.unclosed_interpolation

blueprint Bad {
    x : i32 = 5
    y : String = "value: ${x"
}
